opensource/sonarqube/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deployment
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 0
      containers:
      - name: sonarqube
        image: sonarqube:latest
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 400m
            memory: '2Gi'
          limits:
            cpu: 800m
            memory: '4Gi'
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 0
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: sonarqube-data
          mountPath: /opt/sonarqube/data
        - name: sonarqube-logs
          mountPath: /opt/sonarqube/logs
        - name: sonarqube-extensions
          mountPath: /opt/sonarqube/extensions
      volumes:
      - name: sonarqube-data
        persistentVolumeClaim: 
          claimName: sonarqube-data-pvc
      - name: sonarqube-logs
        persistentVolumeClaim: 
          claimName: sonarqube-logs-pvc
      - name: sonarqube-extensions
        persistentVolumeClaim: 
          claimName: sonarqube-extensions-pvc
      - name: init-sysctl
        configMap:
          name: sonarqube-configmap
          items:
          - key: init_sysctl.sh
            path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: sonarqube-configmap
          items:
          - key: init_fs.sh
            path: init_fs.sh
