opensource/sonarqube/templates/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: sonarqube-service 
  labels: 
    app: sonarqube 
spec: 
  selector: 
    app: sonarqube 
  ports: 
  - port: 9000 
    targetPort: 9000
